Added changes to portfolio

--- a/index.html
+++ b/index.html
@@ -1,14 +1,97 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<TITLE>Welcome!</TITLE>
-	</head>
-	<body>
-		<h1>Welcome to my web page!</h1>
-		<form action="http://github.com/vv-b-s">
-		<h3>There's nothing to show here right now, but one day there will be. I promise! :) </h3>
-		<h3>If you want to have a look at my projects, click this <input type="submit" name="redirectionBTN" value="button"> 
-		to be redirected to my projects page</h3>
-		<h3>I wish you have the nicest day!</h3>
-	</body>
+<head>
+    <TITLE>vv-b-s</TITLE>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/body_modifications.css"/>
+    <link rel="stylesheet" href="css/avatar_modifications.css">
+    <script src="scripts/personal_scripts/githubFetcher.js"></script>
+    <script src="scripts/jquery-3.3.1.min.js"></script>
+    <script defer src="scripts/fontawesome/fontawesome-all.js"></script>
+    <script defer src="scripts/fontawesome/fa-v4-shims.js"></script>
+</head>
+<body>
+
+<div id="main_body_panel" class="panel panel-default">
+    <div class="panel-body">
+        <div id="side_a">
+            <!--Avatar image-->
+            <div class="col-xs-6 col-md-2" id="avatar">
+				<span class="thumbnail">
+					<img src="images/pix-avatar-self.png">
+				</span>
+            </div>
+
+            <!--Contact info-->
+            <div id="contact_me" class="panel panel-default">
+                <div class="panel-heading"><h4>Contact me</h4></div>
+                <div class="panel-body">
+                    <ul style="list-style: none; padding-left: 10px">
+                        <li><i class="fa fa-envelope fa-lg" aria-hidden="true"></i><h4><a href="mailto:valentin.v1997@gmail.com">Email</a></h4></li>
+                        <li><i class="fa fa-linkedin-square fa-lg" aria-hidden="true"></i><h4><a href="https://www.linkedin.com/in/valentin-vasilev-25367211b/">LinkedIn</a></h4></li>
+                        <li><i class="fa fa-github fa-lg" aria-hidden="true"></i><h4><a href="https://github.com/vv-b-s">GitHub</a></h4></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div id="side_b">
+            <!--About me resume-->
+            <div id="about_me" class="panel panel-default">
+                <div class="panel-heading"><h4>About me</h4></div>
+                <div class="panel-body">
+                    <p>My name is Valentin and I'm 21 years old Bulgarian Computer Science student and hobbyist. My
+                        enthusiasm for
+                        computers came since I was a child. I liked playing with computer gadgets, breaking stuff and
+                        trying
+                        to find how to fix it
+                        but my passion towards software came to me recently (about two years ago). It was during the
+                        middle
+                        of my second semester at university
+                        where the first two years we study Economy and the next two Computer Science. Since I was having
+                        a
+                        lot of free time so
+                        I decided not to wait for the third year to start programming but do it right away. So like
+                        every
+                        new to programming person
+                        started, I started looking over the internet to find the best computer language. There were a
+                        lot of
+                        opinions but I chose to start with C, as
+                        people were saying if is very difficult but it teaches you a lot. I didn't get to the difficult
+                        parts though (i.e. memory management, pointers etc.),
+                        because I had to move on with another language, more suitable for my needs. I went on learning
+                        C#
+                        which got me more involved
+                        with programming and then I decided I should take courses in programming apart from my regular
+                        curriculum at university.
+                        I went to programming courses at the Software University - one of the biggest private software
+                        schools in the country. And there I found my passion
+                        with software engineering as I started seeing how all the different parts in software come
+                        together
+                        to create something bigger and useful. There I also had experience with
+                        three more languages - Java, JavaScript, PHP. But what really helped learn programming was my
+                        curiosity for the things
+                        I can do with the knowledge I gain. I started developing my own little projects in attempt to
+                        find
+                        out how things work and
+                        seeing my ideas come to live made and still makes the experience I gain out of software
+                        development
+                        an awesome one.<br>
+                        Nowadays I still continue to learn new things as Computer Science is one endless ever growing
+                        field.
+                        If you want to know more about me, check the content bellow and have a nice day! :)</p>
+                </div>
+            </div>
+
+            <!--Featured GitHub projects-->
+
+        </div>
+    </div>
+</div>
+
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
+
+</body>
 </html>
