--- a/index.html
+++ b/index.html
@@ -75,14 +75,11 @@
                         with software engineering as I started seeing how all the different parts in software come
                         together
                         to create something bigger and useful. There I also had experience with
-                        three more languages - Java, JavaScript, PHP. But what really helped learn programming was my
-                        curiosity for the things
-                        I can do with the knowledge I gain. I started developing my own little projects in attempt to
-                        find
-                        out how things work and
-                        seeing my ideas come to live made and still makes the experience I gain out of software
-                        development
-                        an awesome one.<br>
+                        three more languages - Java, JavaScript, PHP, but what really helped me learn programming was my
+                        curiosity to find out what
+                        I can do with the knowledge I gained. I started developing my own little projects in attempt to
+                        find out how things work and seeing my ideas come to live just made and makes me feel happy about what
+                        I do.<br>
                         Nowadays I still continue to learn new things as Computer Science is one endless ever growing
                         field.
                         If you want to know more about me, check the content bellow and have a nice day! :)</p>
