Fixed problem with displaying content

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="panel-body" style="padding:0">
                     <div class="list-group">
                         <a href="https://1drv.ms/o/s!AtncMMq8WaaViaBWVWYJy39RzRD56w" class="list-group-item" onclick="onLinkedItemClick(this,'rel-content-click')">
-                            <div class="container" style="padding-left: 0">
+                            <div class="container list-descriptions-container" style="padding-left: 0;">
                                 <div class="col-xs-6 col-md-1 app-image">
                                     <span class="thumbnail"><img src="http://www.iconarchive.com/download/i77906/carlosjj/microsoft-office-2013/OneNote.ico"></span>
                                 </div>
@@ -138,7 +138,7 @@
                     <div class="list-group">
                         <a href="https://play.google.com/store/apps/details?id=duckydebug.duckydebug" class="list-group-item"
                            onclick="onLinkedItemClick(this, 'app-clicked')">
-                            <div class="container">
+                            <div class="container list-descriptions-container">
                                 <div class="col-xs-6 col-md-2 app-image" >
                                 <span class="thumbnail" ><img
                                         src="https://lh3.googleusercontent.com/5xzdlK741mj16PSZYCZ2pseErSdUgoWQUVG8Lym8qQ9ZFAi6G-mkE8HaC-9ihhFWlTI=w300-rw"></span>
@@ -154,7 +154,7 @@
                             </div>
                         </a>
                         <a href="https://www.microsoft.com/en-us/store/p/ascii-to-text/9pn63cmswmbl" class="list-group-item" onclick="onLinkedItemClick(this,'app-clicked')">
-                           <div class="container">
+                           <div class="container list-descriptions-container">
                                <div class="col-xs-6 col-md-2 app-image">
                                 <span class="thumbnail"><img
                                         src="https://store-images.s-microsoft.com/image/apps.42315.14354475131591029.4fbb5613-1354-4164-9011-59e8fb424916.ff207e80-bf7f-4f8e-afeb-534bd4f52b8f?w=180&h=180&q=60"></span>
