Updated the heading of "Related content" section

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
             <!--Related content-->
             <div id="related_content" class="panel panel-default">
-                <div class="panel-heading" style="background: beige">Related content</div>
+                <div class="panel-heading" style="background: beige"><h4>Related content</h4></div>
                 <div class="panel-body" style="padding:0">
                     <div class="list-group">
                         <a href="https://1drv.ms/o/s!AtncMMq8WaaViaBWVWYJy39RzRD56w" class="list-group-item" onclick="onLinkedItemClick(this,'rel-content-click')">
