--- a/index.html
+++ b/index.html
@@ -78,14 +78,11 @@
                         middle
                         of my second semester at university
                         where the first two years we study Economy and the next two Computer Science. Since I was having
-                        a
-                        lot of free time so
+                        a lot of free time,
                         I decided not to wait for the third year to start programming but do it right away. So like
-                        every
-                        new to programming person
+                        every new to programming person
                         started, I started looking over the internet to find the best computer language. There were a
-                        lot of
-                        opinions but I chose to start with C, as
+                        lot of opinions but I chose to start with C, as
                         people were saying if is very difficult but it teaches you a lot. I didn't get to the difficult
                         parts though (i.e. memory management, pointers etc.),
                         because I had to move on with another language, more suitable for my needs. I went on learning
@@ -111,7 +108,7 @@
 
             <!--Featured GitHub projects-->
             <div class="panel panel-default" id="#featured_github_projects">
-                <div class="panel-heading" style="background: olive; color: white;"><h4>Featured github projects</h4>
+                <div class="panel-heading" style="background: olive; color: white;"><h4>Featured GitHub projects</h4>
                 </div>
                 <div class="panel-body" style="padding:0;">
                     <div class="list-group">
