--- a/index.html
+++ b/index.html
@@ -69,39 +69,26 @@
             <div id="about_me" class="panel panel-default">
                 <div class="panel-heading"><h4>About me</h4></div>
                 <div class="panel-body">
-                    <p>My name is Valentin and I'm 21 years old Bulgarian Computer Science student and hobbyist. My
-                        enthusiasm for
-                        computers came since I was a child. I liked playing with computer gadgets, breaking stuff and
-                        trying
-                        to find how to fix it
-                        but my passion towards software came to me recently (about two years ago). It was during the
-                        middle
-                        of my second semester at university
+                    <p>My name is Valentin and I'm 21 years old Bulgarian Economics and Computer Science student and hobbyist. 
+                        My enthusiasm for computers and technology is since my childhood. I liked playing with computer gadgets, 
+                        finding out how they work, trying to break them and find a way them. My passion towards software came to me 
+                        recently (about two years ago). It was during the middle of my second semester at university,
                         where the first two years we study Economy and the next two Computer Science. Since I was having
-                        a lot of free time,
-                        I decided not to wait for the third year to start programming but do it right away. So like
-                        every new to programming person
-                        started, I started looking over the internet to find the best computer language. There were a
-                        lot of opinions but I chose to start with C, as
-                        people were saying if is very difficult but it teaches you a lot. I didn't get to the difficult
-                        parts though (i.e. memory management, pointers etc.),
-                        because I had to move on with another language, more suitable for my needs. I went on learning
-                        C#
-                        which got me more involved
-                        with programming and then I decided I should take courses in programming apart from my regular
-                        curriculum at university.
-                        I went to programming courses at the Software University - one of the biggest private software
-                        schools in the country. And there I found my passion
-                        with software engineering as I started seeing how all the different parts in software come
-                        together
-                        to create something bigger and useful. There I also had experience with
-                        three more languages - Java, JavaScript, PHP, but what really helped me learn programming was my
-                        curiosity to find out what
-                        I can do with the knowledge I gained. I started developing my own little projects in attempt to
-                        find out how things work and seeing my ideas come to live just made and makes me feel happy about what
-                        I do.<br>
-                        Nowadays I still continue to learn new things as Computer Science is one endless ever growing
-                        field.
+                        a lot of free time, I decided not to waste it and wait for the third year to start programming dealing with 
+                        code, but do it right away. So like every new to programming person, I started looking over the internet 
+                        to find the best computer language. Mission impossible, right? There were a lot of opinions so I decided to 
+                        start with C, as people were saying it is very difficult to learn and work with, but it also teaches you a lot. 
+                        Well, I didn't get to the difficult parts though (i.e. memory management, pointers, etc.), because I had to move on 
+                        with another language, more suitable for my needs. I went on learning C# which got me more involved
+                        with programming and then I decided I should take courses in programming to speed up my learning and start doing some real stuff, 
+                        apart from my regular curriculum at university. So I signed up for programming courses at the Software University - one of the 
+                        biggest private software schools in the country. And there I found my passion with software engineering, as 
+                        I started seeing how all the different parts in software come together to make something bigger and useful. There I also had experience 
+                        with three more languages - Java, JavaScript, PHP, but what really helped me learn programming was my
+                        curiosity to find out what I can do with the knowledge I gained and my constant motivation to achieve my goals. 
+                        I started developing my own little projects in attempt to find out how things work and seeing my ideas come to 
+                        live just made and makes me feel happy about what I do.<br/>
+                        Nowadays I keep learning new stuff as Computer Science is one endless ever growing field.
                         If you want to know more about me, check the content bellow and have a nice day! :)</p>
                 </div>
             </div>
