--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
                 <div class="panel-body">
                     <p>My name is Valentin and I'm 21 years old Bulgarian Economics and Computer Science student and hobbyist. 
                         My enthusiasm for computers and technology is since my childhood. I liked playing with computer gadgets, 
-                        finding out how they work, trying to break them and find a way them. My passion towards software came to me 
+                        finding out how they work, trying to break them and find a way to fix them. My passion towards software came to me 
                         recently (about two years ago). It was during the middle of my second semester at university,
                         where the first two years we study Economy and the next two Computer Science. Since I was having
-                        a lot of free time, I decided not to waste it and wait for the third year to start programming dealing with 
-                        code, but do it right away. So like every new to programming person, I started looking over the internet 
+                        a lot of free time, I decided not to waste it and wait for the third year to start programming
+                        , but do it right away. So like every new to programming person, I started looking over the internet 
                         to find the best computer language. Mission impossible, right? There were a lot of opinions so I decided to 
                         start with C, as people were saying it is very difficult to learn and work with, but it also teaches you a lot. 
                         Well, I didn't get to the difficult parts though (i.e. memory management, pointers, etc.), because I had to move on 
@@ -87,7 +87,7 @@
                         with three more languages - Java, JavaScript, PHP, but what really helped me learn programming was my
                         curiosity to find out what I can do with the knowledge I gained and my constant motivation to achieve my goals. 
                         I started developing my own little projects in attempt to find out how things work and seeing my ideas come to 
-                        live just made and makes me feel happy about what I do.<br/>
+                        life just made and makes me feel happy about what I do.<br/>
                         Nowadays I keep learning new stuff as Computer Science is one endless ever growing field.
                         If you want to know more about me, check the content bellow and have a nice day! :)</p>
                 </div>
