--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <TITLE>vv-b-s</TITLE>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+          integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="stylesheet" href="css/body_modifications.css"/>
     <link rel="stylesheet" href="css/avatar_modifications.css">
-    <script src="scripts/personal_scripts/githubFetcher.js"></script>
+    <script src="scripts/personal_scripts/utils.js"></script>
     <script src="scripts/jquery-3.3.1.min.js"></script>
-    <script defer src="scripts/fontawesome/fontawesome-all.js"></script>
-    <script defer src="scripts/fontawesome/fa-v4-shims.js"></script>
     <script src="scripts/personal_scripts/clickControllers.js"></script>
+    <script src="scripts/personal_scripts/utils.js"></script>
     <link rel="icon" href="images/pix-avatar-self.png">
 </head>
 <body>
@@ -25,18 +26,21 @@
 					<img src="images/pix-avatar-self.png">
 				</span>
             </div>
-            <h1 style="padding-left: 10px; margin-bottom: 30px">Valentin Vasilev</h1>
+            <div style="padding-left: 10px; margin-bottom: 30px">
+                <h1>Valentin Vasilev</h1>
+                <h4 style="padding: 5px; color: grey;">Junior JavaEE Developer at VIDA Software Ltd.</h4>
+            </div>
 
             <!--Contact info-->
             <div id="contact_me" class="panel panel-default">
                 <div class="panel-heading"><h4>Contact me</h4></div>
                 <div class="panel-body">
                     <ul style="list-style: none; padding-left: 10px">
-                        <li><i class="fa fa-envelope fa-lg" aria-hidden="true"></i><h4><a
+                        <li><i class="fas fa-envelope"></i><h4><a
                                 href="mailto:valentin.v1997@gmail.com">Email</a></h4></li>
-                        <li><i class="fa fa-linkedin-square fa-lg" aria-hidden="true"></i><h4><a
+                        <li><i class="fab fa-linkedin"></i><h4><a
                                 href="https://www.linkedin.com/in/valentin-vasilev-25367211b/">LinkedIn</a></h4></li>
-                        <li><i class="fa fa-github fa-lg" aria-hidden="true"></i><h4><a
+                        <li><i class="fab fa-github-alt"></i><h4><a
                                 href="https://github.com/vv-b-s">GitHub</a></h4></li>
                     </ul>
                 </div>
@@ -47,14 +51,17 @@
                 <div class="panel-heading" style="background: beige"><h4>Related content</h4></div>
                 <div class="panel-body" style="padding:0">
                     <div class="list-group">
-                        <a href="https://1drv.ms/o/s!AtncMMq8WaaViaBWVWYJy39RzRD56w" class="list-group-item" onclick="onLinkedItemClick(this,'rel-content-click')">
+                        <a href="https://1drv.ms/o/s!AtncMMq8WaaViaBWVWYJy39RzRD56w" class="list-group-item"
+                           onclick="onLinkedItemClick(this,'rel-content-click')">
                             <div class="container list-descriptions-container" style="padding-left: 0;">
                                 <div class="col-xs-6 col-md-1 app-image">
-                                    <span class="thumbnail"><img src="http://www.iconarchive.com/download/i77906/carlosjj/microsoft-office-2013/OneNote.ico"></span>
+                                    <span class="thumbnail"><img
+                                            src="https://cdn.iconscout.com/public/images/icon/free/png-512/microsoft-onenote-logo-31bb7fcc4ce323f1-512x512.png"></span>
                                 </div>
                                 <div class="app-description">
                                     <h4 style="margin-bottom: 0">Programming</h4>
-                                    <h6 style="margin-top: 0">A notebook by Valentin Vasilev</h6>
+                                    <h6 style="margin-top: 0">A notebook where all my programming observations are
+                                        written</h6>
                                 </div>
                             </div>
                         </a>
@@ -69,27 +76,25 @@
             <div id="about_me" class="panel panel-default">
                 <div class="panel-heading"><h4>About me</h4></div>
                 <div class="panel-body">
-                    <p>My name is Valentin and I'm 21 years old Bulgarian Economics and Computer Science student and hobbyist. 
-                        My enthusiasm for computers and technology is since my childhood. I liked playing with computer gadgets, 
-                        finding out how they work, trying to break them and find a way to fix them. My passion towards software came to me 
-                        recently (about two years ago). It was during the middle of my second semester at university,
-                        where the first two years we study Economy and the next two Computer Science. Since I was having
-                        a lot of free time, I decided not to waste it and wait for the third year to start programming
-                        , but do it right away. So like every new to programming person, I started looking over the internet 
-                        to find the best computer language. Mission impossible, right? There were a lot of opinions so I decided to 
-                        start with C, as people were saying it is very difficult to learn and work with, but it also teaches you a lot. 
-                        Well, I didn't get to the difficult parts though (i.e. memory management, pointers, etc.), because I had to move on 
-                        with another language, more suitable for my needs. I went on learning C# which got me more involved
-                        with programming and then I decided I should take courses in programming to speed up my learning and start doing some real stuff, 
-                        apart from my regular curriculum at university. So I signed up for programming courses at the Software University - one of the 
-                        biggest private software schools in the country. And there I found my passion with software engineering, as 
-                        I started seeing how all the different parts in software come together to make something bigger and useful. There I also had experience 
-                        with three more languages - Java, JavaScript, PHP, but what really helped me learn programming was my
-                        curiosity to find out what I can do with the knowledge I gained and my constant motivation to achieve my goals. 
-                        I started developing my own little projects in attempt to find out how things work and seeing my ideas come to 
-                        life just made and makes me feel happy about what I do.<br/>
+                    <p>My name is Valentin and I'm <span id="age"></span> years old Bulgarian Economics and Computer Science student and hobbyist.
+                        My enthusiasm for computers and technology is since my childhood. I liked playing with computer gadgets, finding out how they work, trying to break them and find a way to fix them.
+                        My interest in software development started around <span id="coding-since"></span> years ago.
+                        It was during the middle of my second semester at university, where the first two years we study Economy and the next two Computer Science.
+                        Since I had a lot of free time, I decided not to waste it and wait for the third year to start programming, but do it right away.
+                        So like every new to programming person, I went over the internet look for the best computer language.
+                        Mission impossible, right?
+                        There is no such thing as best or suitable programming language and  are a lot of opinions depending on person to person and their experience.
+                        I decided to start with C, as it was said it is very difficult to learn and what a better challenge?
+                        Well, I didn't get to the difficult parts though (i.e. memory management, pointers, etc.), because I had to move on with another language, more suitable for professional development.
+                        I went on learning C# and .NET technologies which got me more involved with programming and then I decided I should take courses in programming to speed up my learning and start doing some real stuff, apart from my regular curriculum at university.
+                        So I signed up for programming courses at the Software University - one of the biggest private software schools in the country.
+                        There I found my passion with software engineering, as I started seeing how all the different parts in software come together to make something bigger and useful.
+                        I also had experience with three more languages - Java, JavaScript, PHP, but what really helped me learn programming was the curiosity to find out what I can do with the knowledge I gather and the constant motivation to achieve new goals.
+                        I started developing my own little side projects in attempt to find out how things work and seeing my ideas come to life just made and makes me feel happy about what I do.<br/>
                         Nowadays I keep learning new stuff as Computer Science is one endless ever growing field.
-                        If you want to know more about me, check the content bellow and have a nice day! :)</p>
+                        In May 2018 I started my first job in <a href="http://vida-soft.com/">VIDA Software Ltd.</a> - a small software company where me and three very experienced senior developers build software solutions for the enterprise using the Java Enterprise Edition technology stack.
+                        Throughout my work I have improved my teamwork and communication skills, learned a lot about the the process of building a software for the enterprise, AGILE development and of course made new friendships.
+                    </p>
                 </div>
             </div>
 
@@ -120,40 +125,46 @@
                 <div class="panel-heading" style="background: lavender;"><h4>My apps</h4></div>
                 <div class="panel-body" style="padding:0;">
                     <div class="list-group">
-                        <a href="https://play.google.com/store/apps/details?id=duckydebug.duckydebug" class="list-group-item"
+                        <a href="https://play.google.com/store/apps/details?id=duckydebug.duckydebug"
+                           class="list-group-item"
                            onclick="onLinkedItemClick(this, 'app-clicked')">
                             <div class="container list-descriptions-container">
-                                <div class="col-xs-6 col-md-2 app-image" >
-                                <span class="thumbnail" ><img
+                                <div class="col-xs-6 col-md-2 app-image">
+                                <span class="thumbnail"><img
                                         src="https://lh3.googleusercontent.com/5xzdlK741mj16PSZYCZ2pseErSdUgoWQUVG8Lym8qQ9ZFAi6G-mkE8HaC-9ihhFWlTI=w300-rw"></span>
                                 </div>
                                 <div class="app-description">
                                     <h4>Ducky Debug (Alpha)</h4>
-                                    <p>The app is like a notepad, but a special one! It is meant to help you solve out your
-                                        programming issues by creating a thinking path through answering questions, relevant to
-                                        the kind of issue you're having.What the app does is templating questions that would
+                                    <p>The app is like a notepad, but a special one! It is meant to help you solve out
+                                        your
+                                        programming issues by creating a thinking path through answering questions,
+                                        relevant to
+                                        the kind of issue you're having.What the app does is templating questions that
+                                        would
                                         prompt you to think about the problem in different ways and write out about your
                                         observations...</p>
                                 </div>
                             </div>
                         </a>
-                        <a href="https://www.microsoft.com/en-us/store/p/ascii-to-text/9pn63cmswmbl" class="list-group-item" onclick="onLinkedItemClick(this,'app-clicked')">
-                           <div class="container list-descriptions-container">
-                               <div class="col-xs-6 col-md-2 app-image">
+                        <a href="https://www.microsoft.com/en-us/store/p/ascii-to-text/9pn63cmswmbl"
+                           class="list-group-item" onclick="onLinkedItemClick(this,'app-clicked')">
+                            <div class="container list-descriptions-container">
+                                <div class="col-xs-6 col-md-2 app-image">
                                 <span class="thumbnail"><img
                                         src="https://store-images.s-microsoft.com/image/apps.42315.14354475131591029.4fbb5613-1354-4164-9011-59e8fb424916.ff207e80-bf7f-4f8e-afeb-534bd4f52b8f?w=180&h=180&q=60"></span>
-                               </div>
-                               <div class="app-description">
-                                   <h4>ASCII to Text</h4>
-                                   <p>
-                                       - Convert almost any text into Binary, Octal, Decimal or Hex.<br>
-                                       - Convert Binary from ASCII and Octal, Decimal, Hex from Unicode to text.<br><br>
-                                       - Use the combo box to switch between counting bases.<br>
-                                       - The Binary conversion will work only with 255 characters.<br>
-                                       - All other conversions will work with the limit of their integer length.<br>
-                                   </p>
-                               </div>
-                           </div>
+                                </div>
+                                <div class="app-description">
+                                    <h4>ASCII to Text</h4>
+                                    <p>
+                                        - Convert almost any text into Binary, Octal, Decimal or Hex.<br>
+                                        - Convert Binary from ASCII and Octal, Decimal, Hex from Unicode to
+                                        text.<br><br>
+                                        - Use the combo box to switch between counting bases.<br>
+                                        - The Binary conversion will work only with 255 characters.<br>
+                                        - All other conversions will work with the limit of their integer length.<br>
+                                    </p>
+                                </div>
+                            </div>
                         </a>
                     </div>
                 </div>
@@ -169,11 +180,19 @@
 <!-- Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112975842-1"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    window.dataLayer = window.dataLayer || [];
 
-  gtag('config', 'UA-112975842-1');
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+
+    gtag('js', new Date());
+
+    gtag('config', 'UA-112975842-1');
+
+    //Generate age
+    document.getElementById('age').textContent = getYears(new Date(1997, 1, 12, 0, 0, 0, 0));
+    document.getElementById('coding-since').textContent = getYears(new Date(2016, 4, 21, 0, 0, 0, 0));
 </script>
 
 </body>
