Added Linear regression project to side projects

--- a/index.html
+++ b/index.html
@@ -98,12 +98,14 @@
                 </div>
             </div>
 
-            <!--Featured GitHub projects-->
-            <div class="panel panel-default" id="#featured_github_projects">
-                <div class="panel-heading" style="background: olive; color: white;"><h4>Featured GitHub projects</h4>
+            <!--Side projects-->
+            <div class="panel panel-default" id="#side_projects">
+                <div class="panel-heading" style="background: olive; color: white;"><h4>Side projects</h4>
                 </div>
                 <div class="panel-body" style="padding:0;">
                     <div class="list-group">
+                        <a href="https://github.com/CrazyCodingFTW/LinearRegression" class="list-group-item"
+                           onclick="onLinkedItemClick(this, 'github-project-clicked')">Linear Regression</a>
                         <a href="https://github.com/vv-b-s/DuckyDebug-Web" class="list-group-item"
                            onclick="onLinkedItemClick(this, 'github-project-clicked')">DuckyDebug-Web</a>
                         <a href="https://github.com/vv-b-s/SoftUni" class="list-group-item"
