Made website look better on phone screens

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 <body>
 
 <div class="container-fluid">
-    <div class="row mt-5 ml-3 mr-md-3 mr-sm-3">
-        <div class="col-lg-3 mr-lg-4 col-md-12 col-sm-12 mb-lg-3 mb-sm-3">
+    <div class="row mt-5 ml-3 mr-md-3 mr-sm-3 mr-3">
+        <div class="col-lg-3 mr-lg-4 col-md-12 col-sm-12 mb-3">
             <div class="row card general-card">
                 <div class="col">
                     <div class="row d-flex justify-content-center m-5">
@@ -57,11 +57,11 @@
                                 <div class="col">
                                     <h4>Contact</h4>
                                     <div class="row d-flex justify-content-center">
-                                        <h1 class="mr-lg-3 mr-md-5 mr-sm-5"><a href="mailto:valentin@vv-v-s.com"
+                                        <h1 class="mr-lg-3 mr-md-5 mr-sm-5 mr-3"><a href="mailto:valentin@vv-b-s.com"
                                                                                class="mail-link"><i
                                                 class="fas fa-envelope"></i></a>
                                         </h1>
-                                        <h1 class="mr-lg-3 mr-md-5 mr-sm-5"><a class="skype-link"
+                                        <h1 class="mr-lg-3 mr-md-5 mr-sm-5 mr-3"><a class="skype-link"
                                                                                href="skype:valentin.v_97"><i
                                                 class="fab fa-skype"></i></a></h1>
                                         <h1><a class="discord-link" href="discord:Brain Stew#1101"><i
@@ -74,12 +74,12 @@
                                 <div class="col">
                                     <h4>Social media</h4>
                                     <div class="row d-flex justify-content-center">
-                                        <h1 class="mr-lg-3 mr-md-5 mr-sm-5"><a
+                                        <h1 class="mr-lg-3 mr-md-5 mr-sm-5 mr-3"><a
                                                 href="https://www.linkedin.com/in/valentin-vasilev-25367211b/"
                                                 class="linkedin-link"><i class="fab fa-linkedin"></i></a>
                                         </h1>
 
-                                        <h1 class="mr-lg-3 mr-md-5 mr-sm-5"><a
+                                        <h1 class="mr-lg-3 mr-md-5 mr-sm-5 mr-3"><a
                                                 href="https://medium.com/@valentin.v1997"
                                                 class="medium-link"><i class="fab fa-medium"></i></a>
                                         </h1>
@@ -96,12 +96,12 @@
                                 <div class="col">
                                     <h4>Git</h4>
                                     <div class="row d-flex justify-content-center">
-                                        <h1 class="mr-lg-3 mr-md-5 mr-sm-5"><a
+                                        <h1 class="mr-lg-3 mr-md-5 mr-sm-5 mr-3"><a
                                                 href="https://github.com/vv-b-s"
                                                 class="github-link"><i class="fab fa-github"></i></a>
                                         </h1>
 
-                                        <h1 class="mr-lg-3 mr-md-5 mr-sm-5"><a
+                                        <h1 class="mr-lg-3 mr-md-5 mr-sm-5 mr-3"><a
                                                 href="https://gitlab.com/vv-b-s"
                                                 class="gitlab-link"><i class="fab fa-gitlab"></i></a>
                                         </h1>
@@ -119,13 +119,13 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-8 col-md-12 col-sm-12 card general-card">
+        <div class="col-lg-8 col-md-12 col-sm-12 py-5 card general-card">
 
 
             <!--            Articles-->
             <div class="row">
                 <div class="col">
-                    <div class="card info-card mt-5">
+                    <div class="card info-card">
                         <div class="card-header">
                             Articles
                         </div>
@@ -136,10 +136,10 @@
                                        href="https://medium.com/vida-soft/creating-signed-ssl-connection-for-your-web-application-with-certbot-nginx-and-payaramicro-89e2ac6a3799">
                                         <div class="container-fluid">
                                             <div class="row">
-                                                <div class="col-3">
+                                                <div class="col-lg-3">
                                                     <img src="res/img/articles/ssl-article-image.jpg" class="img-fluid">
                                                 </div>
-                                                <div class="col-8">
+                                                <div class="col-lg-8">
                                                     <div class="row">
                                                         <div class="col">
                                                             <h3>Creating signed SSL connection for your web application
@@ -279,10 +279,10 @@
                                        href="#">
                                         <div class="container-fluid">
                                             <div class="row">
-                                                <div class="col-3">
+                                                <div class="col-lg-3">
                                                     <img src="res/img/education/unwe.png" class="img-fluid">
                                                 </div>
-                                                <div class="col-8">
+                                                <div class="col-lg-8">
                                                     <div class="row">
                                                         <div class="col">
                                                             <h3>Bachelors degree on 'Business informatics and communication' at the University of national and world economy</h3>
@@ -310,10 +310,10 @@
                                        href="https://softuni.bg/certificates/details/53420/0d8d0865">
                                         <div class="container-fluid">
                                             <div class="row">
-                                                <div class="col-3">
+                                                <div class="col-lg-3 col-md-3">
                                                     <img src="res/img/education/softuni.png" class="img-fluid">
                                                 </div>
-                                                <div class="col-8">
+                                                <div class="col-lg-8 col-md-3">
                                                     <div class="row">
                                                         <div class="col">
                                                             <h3>C# OOP Advenced</h3>
@@ -335,10 +335,10 @@
                                        href="https://softuni.bg/certificates/details/52596/dce8a637">
                                         <div class="container-fluid">
                                             <div class="row">
-                                                <div class="col-3">
+                                                <div class="col-lg-3 col-md-3">
                                                     <img src="res/img/education/softuni.png" class="img-fluid">
                                                 </div>
-                                                <div class="col-8">
+                                                <div class="col-lg-8 col-md-8">
                                                     <div class="row">
                                                         <div class="col">
                                                             <h3>C# OOP Basics</h3>
@@ -360,10 +360,10 @@
                                        href="https://softuni.bg/certificates/details/51526/f7037c70">
                                         <div class="container-fluid">
                                             <div class="row">
-                                                <div class="col-3">
+                                                <div class="col-lg-3 col-md-3">
                                                     <img src="res/img/education/softuni.png" class="img-fluid">
                                                 </div>
-                                                <div class="col-8">
+                                                <div class="col-lg-8 col-md-8">
                                                     <div class="row">
                                                         <div class="col">
                                                             <h3>C# Advanced</h3>
@@ -385,10 +385,10 @@
                                        href="https://softuni.bg/certificates/details/22824/debc2bc3">
                                         <div class="container-fluid">
                                             <div class="row">
-                                                <div class="col-3">
+                                                <div class="col-lg-3 col-md-3">
                                                     <img src="res/img/education/softuni.png" class="img-fluid">
                                                 </div>
-                                                <div class="col-8">
+                                                <div class="col-lg-8 col-md-8">
                                                     <div class="row">
                                                         <div class="col">
                                                             <h3>Software technologies</h3>
@@ -410,10 +410,10 @@
                                        href="https://softuni.bg/certificates/details/21257/fc2d53fb">
                                         <div class="container-fluid">
                                             <div class="row">
-                                                <div class="col-3">
+                                                <div class="col-lg-3 col-md-3">
                                                     <img src="res/img/education/softuni.png" class="img-fluid">
                                                 </div>
-                                                <div class="col-8">
+                                                <div class="col-lg-8 col-md-8">
                                                     <div class="row">
                                                         <div class="col">
                                                             <h3>Programming Fundamentals</h3>
@@ -435,10 +435,10 @@
                                        href="https://softuni.bg/certificates/details/18270/7c20c13e">
                                         <div class="container-fluid">
                                             <div class="row">
-                                                <div class="col-3">
+                                                <div class="col-lg-3 col-md-3">
                                                     <img src="res/img/education/softuni.png" class="img-fluid">
                                                 </div>
-                                                <div class="col-8">
+                                                <div class="col-lg-8 col-md-8">
                                                     <div class="row">
                                                         <div class="col">
                                                             <h3>Programming basics</h3>
@@ -460,10 +460,10 @@
                                        href="https://www.youracclaim.com/badges/a0709f15-50c2-4bf8-9966-d36195fcf733/linked_in_profile">
                                         <div class="container-fluid">
                                             <div class="row">
-                                                <div class="col-3">
+                                                <div class="col-lg-3 col-md-3">
                                                     <img src="res/img/education/mos-sharepoint.png" class="img-fluid">
                                                 </div>
-                                                <div class="col-8">
+                                                <div class="col-lg-8 col-md-8">
                                                     <div class="row">
                                                         <div class="col">
                                                             <h3>Microsoft Office Specialist SharePoint 2013</h3>
@@ -493,7 +493,16 @@
 </div>
 
 <!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112975842-1"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-112975842-1');
+</script>
+
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
