Added photography link

--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
                                                 href="https://instagr.am/brainstew_x_x"
                                                 class="instagram-link"><i class="fab fa-instagram"></i></a>
                                         </h1>
+
+                                        <h1 class="mr-lg-3 mr-md-5 mr-sm-5"><a
+                                                href="https://photos.vv-b-s.com"
+                                                class="photography-link"><i class="fa fa-camera"></i></a>
+                                        </h1>
                                     </div>
                                 </div>
                             </div>
